<resources>
    <string name="app_name">LoginDatabaseFirebase</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
</resources>
