<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">
    <TextView
        android:id="@+id/tv_postlogin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="30sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/tv_postlogin_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="30sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/tv_postlogin_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textSize="30sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/tv_postlogin_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="30sp"
        android:layout_marginTop="5dp"/>
</LinearLayout>